add BLEU calc and fix

--- a/util.ipynb
+++ b/util.ipynb
@@ -79,6 +79,37 @@
     "%%bash\n",
     "pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "---------------------------------------------------------------------------\n",
+    "KeyError                                  Traceback (most recent call last)\n",
+    "<ipython-input-41-b5d1f39fa8ff> in <module>()\n",
+    "----> 1 ja_pred = [evaluate(sentence)[0] for sentence in en_test] ##keyerrorの例外処理を入れる\n",
+    "\n",
+    "<ipython-input-41-b5d1f39fa8ff> in <listcomp>(.0)\n",
+    "----> 1 ja_pred = [evaluate(sentence)[0] for sentence in en_test] ##keyerrorの例外処理を入れる\n",
+    "\n",
+    "<ipython-input-30-3bbd2a3f63f0> in evaluate(sentence)\n",
+    "      4     sentence = preprocess_sentence(sentence)\n",
+    "      5 \n",
+    "----> 6     inputs = [inp_lang.word_index[i] for i in sentence.split(' ')]\n",
+    "      7     inputs = tf.keras.preprocessing.sequence.pad_sequences([inputs],\n",
+    "      8                                                            maxlen=max_length_inp,\n",
+    "\n",
+    "<ipython-input-30-3bbd2a3f63f0> in <listcomp>(.0)\n",
+    "      4     sentence = preprocess_sentence(sentence)\n",
+    "      5 \n",
+    "----> 6     inputs = [inp_lang.word_index[i] for i in sentence.split(' ')]\n",
+    "      7     inputs = tf.keras.preprocessing.sequence.pad_sequences([inputs],\n",
+    "      8                                                            maxlen=max_length_inp,\n",
+    "\n",
+    "KeyError: 'rotates'"
+   ]
   }
  ],
  "metadata": {
