--- a/util.ipynb
+++ b/util.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,8 @@
      "output_type": "stream",
      "text": [
       "             total       used       free     shared    buffers     cached\n",
-      "Mem:          3945       2119       1825          0        135       1494\n",
-      "-/+ buffers/cache:        489       3455\n",
+      "Mem:         61401       5972      55428        134        181       3485\n",
+      "-/+ buffers/cache:       2306      59095\n",
       "Swap:            0          0          0\n"
      ]
     }
@@ -23,15 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
-      "\n"
+      "Fri Jan 31 15:31:51 2020       \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| NVIDIA-SMI 418.87.01    Driver Version: 418.87.01    CUDA Version: 10.1     |\n",
+      "|-------------------------------+----------------------+----------------------+\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+      "|===============================+======================+======================|\n",
+      "|   0  Tesla K80           On   | 00000000:00:1E.0 Off |                    0 |\n",
+      "| N/A   51C    P0    57W / 149W |  10965MiB / 11441MiB |      0%      Default |\n",
+      "+-------------------------------+----------------------+----------------------+\n",
+      "                                                                               \n",
+      "+-----------------------------------------------------------------------------+\n",
+      "| Processes:                                                       GPU Memory |\n",
+      "|  GPU       PID   Type   Process name                             Usage      |\n",
+      "|=============================================================================|\n",
+      "|    0      9168      C   ...naconda3/envs/tensorflow_p36/bin/python 10952MiB |\n",
+      "+-----------------------------------------------------------------------------+\n"
      ]
     }
    ],
@@ -42,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -50,10 +65,10 @@
      "output_type": "stream",
      "text": [
       "Filesystem     1M-blocks  Used Available Use% Mounted on\n",
-      "devtmpfs            1963     1      1963   1% /dev\n",
-      "tmpfs               1973     0      1973   0% /dev/shm\n",
-      "/dev/xvda1        100664 71611     28955  72% /\n",
-      "/dev/xvdf           4976    21      4684   1% /home/ec2-user/SageMaker\n"
+      "devtmpfs           30691     1     30691   1% /dev\n",
+      "tmpfs              30701     0     30701   0% /dev/shm\n",
+      "/dev/xvda1        100664 73359     27208  73% /\n",
+      "/dev/xvdf           4976  2544      2161  55% /home/ec2-user/SageMaker\n"
      ]
     }
    ],
